--- a/ru/index.html
+++ b/ru/index.html
@@ -5,49 +5,50 @@
     <title>Азат Кашапов</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <meta property="og:title" content="Азат Кашапов - Frontend Engineer" />
     <meta property="og:type" content="profile" />
     <meta property="og:url" content="https://ufaboy.github.io" />
-    <meta property="og:image" content="https://ufaboy.github.io/img/avatar.png"/>
-    <meta property="og:description" content="Опытный Frontend разработчик, специализирующийся на Vue и Nuxt."/>
+    <meta
+      property="og:image"
+      content="https://ufaboy.github.io/img/avatar.png"
+    />
+    <meta
+      property="og:description"
+      content="Опытный Frontend разработчик, специализирующийся на Vue и Nuxt."
+    />
     <meta property="og:locale" content="ru_RU" />
     <meta property="profile:first_name" content="Азат" />
     <meta property="profile:last_name" content="Кашапов" />
-
     <link rel="manifest" href="site.webmanifest" />
     <link rel="apple-touch-icon" href="icon.png" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-
     <link rel="stylesheet" href="../css/main.css" />
-
     <meta name="theme-color" content="#fafafa" />
   </head>
 
   <body>
     <main class="main">
       <section class="bio">
-        <div class="profile">
+        <figure class="profile">
           <img
             src="/img/avatar.png"
-            alt="Azat's Photo"
+            alt="Azat Kashapov's Photo"
             class="profile-photo"
           />
-          <div>
-            <h2 class="name">Азат Кашапов</h2>
-            <div class="position">Software Engineer
-            </div>
-          </div>
-        </div>
+          <figcaption>
+            <h1 class="name">Азат Кашапов</h1>
+            <div class="position">Software Engineer</div>
+          </figcaption>
+        </figure>
         <hr />
         <div class="contact-info">
           <div>
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#mail" />
             </svg>
-            <a href="mailto:azat.developer@gmail.com" class="link"
-              >azat.developer@gmail.com</a
-            >
+            <a href="mailto:azat.developer@gmail.com" class="link">
+              azat.developer@gmail.com
+            </a>
           </div>
           <div>
             <svg class="icon" fill="none">
@@ -59,23 +60,27 @@
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#linkedin" />
             </svg>
-            <a href="https://www.linkedin.com/in/azat-kashapov/" class="link"
-              >azat-kashapov</a
-            >
+            <a href="https://www.linkedin.com/in/azat-kashapov/" class="link">
+              azat-kashapov
+            </a>
           </div>
           <div>
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#telegram" />
             </svg>
-            <a href="https://t.me/ufaboy" class="link"
-              >@ufaboy</a
-            >
+            <a href="https://t.me/ufaboy" class="link"> @ufaboy </a>
           </div>
           <div>
             <svg class="icon" fill="none">
               <use xlink:href="/img/iconSprite.svg#location" />
             </svg>
             Bar, Montenegro
+          </div>
+          <div>
+            <svg class="icon" fill="none">
+              <use xlink:href="/img/iconSprite.svg#timezone" />
+            </svg>
+            Timezone: <abbr title="GMT+1/2">CET/CEST</abbr> 
           </div>
         </div>
       </section>
@@ -100,23 +105,28 @@
         <span>Что я могу дать:</span>
         <ol>
           <li>Крутую верстку;</li>
-          <li>Чистый, аккуратный Vue код (максимально по Vue style guide);</li>
-          <li>Норм Typescript (не налеплю вам везде any);</li>
+          <li>
+            Чистый, аккуратный Vue код (максимально по&nbsp;Vue style guide);
+          </li>
+          <li>Норм Typescript (не&nbsp;налеплю вам везде any);</li>
           <li>Годный рефакторинг вашему легаси;</li>
-          <li>Внятную и прозрачную, дружелюбную коммуникацию;</li>
-          <li>Что не умею, тому учусь так, что искры летят;</li>
+          <li>Внятную и&nbsp;прозрачную, дружелюбную коммуникацию;</li>
+          <li>Что не&nbsp;умею, тому учусь так, что искры летят;</li>
           <li>Адекватные оценки сроков выполнения задач;</li>
           <li>Сделаю npm библиотеку для переиспользуемого кода;</li>
-          <li>Могу сделать Web Extension и Web Components;</li>
+          <li>Могу сделать Web Extension и&nbsp;Web Components;</li>
         </ol>
         <span>Что я могу дать:</span>
         <ol>
-          <li>Продукт, за который радеет команда, любимый и пестуемый;</li>
+          <li>
+            Продукт, за&nbsp;который радеет команда, любимый и&nbsp;пестуемый;
+          </li>
           <li>Славный коллектив;</li>
           <li>Удаленку;</li>
         </ol>
-        <p>В общем, хочу проект, в который смогу от души вложиться и на котором будет интересно работать.
-        </p>
+        <p>
+          В&nbsp;общем, хочу проект, в&nbsp;который смогу от&nbsp;души вложиться
+          и&nbsp;на&nbsp;котором будет интересно работать.
         </p>
       </section>
       <section class="experience">
@@ -134,12 +144,12 @@
               </div>
             </div>
             <div class="job-head__line text-grey text-small">
-              <div>
+              <a href="https://forestvpn.com" class="link">
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
                 </svg>
                 <b>ForestVPN</b>
-              </div>
+              </a>
               <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#calendar" />
@@ -149,14 +159,45 @@
             </div>
           </div>
           <div class="job-description">
-            Сделал сайт для покупки подписки на сервис, достаточно стандартная штука, личный кабинет, checkout, покупка, чарты, i18n (включая RTL арабский, иврит). Вдобавок сделал сайт для Cloud VPN (что то типа white label). Ну и самое интересное для меня сделал Web Extension для управления VPN из браузера.
-            Сделал также несколько side projects:
+            <p>
+              Сделал сайт для покупки подписки на&nbsp;сервис, достаточно
+              стандартная штука, личный кабинет, checkout, покупка, чарты, i18n
+              (включая RTL арабский, иврит).
+            </p>
+            <p>
+              Вдобавок сделал сайт для Cloud VPN (что то&nbsp;типа white label).
+            </p>
+            <p>
+              Ну&nbsp;и&nbsp;самое интересное для меня сделал Web Extension для
+              управления VPN из&nbsp;браузера
+            </p>
+            <p>
+              Сделал также несколько side<br />
+              projects:
+            </p>
             <ul>
-              <li>Сайт для поиска моделей OF (Nuxt3), довел до релиза, теперь ушло SEO оптимизаторам.</li>
-              <li>2 сайта для покупки крипты (Bind, Viking FEHU). Из интересного: работа с Metamask, и GraphQL</li>
-              <li>Поддержка сайта/админки 1.to в пуле Aleo. Добавил туда connect к Leo Wallet, и стандартные sign, payout (React)</li>
-              <li>Поддержка админки управления сервисом SMS рассылок(Nuxt2, я не знаю почему сайт подняли на нем.)</li>
-              <li>Сайт поисковик по книжкам, для привлечения трафика (Nuxt3)</li>
+              <li>
+                Сайт для поиска моделей OF&nbsp;(Nuxt3), довел до&nbsp;релиза,
+                теперь ушло
+                <abbr title="Search engine optimization" lang="en">SEO</abbr>
+                оптимизаторам.
+              </li>
+              <li>
+                2 сайта для покупки крипты (Bind, Viking FEHU).
+                Из&nbsp;интересного: работа с&nbsp;Metamask, и&nbsp;GraphQL
+              </li>
+              <li>
+                Поддержка сайта/админки 1.to в&nbsp;пуле Aleo. Добавил туда
+                connect к&nbsp;Leo Wallet, и&nbsp;стандартные sign, payout
+                (React)
+              </li>
+              <li>
+                Поддержка админки управления сервисом SMS рассылок(Nuxt2,
+                я&nbsp;не&nbsp;знаю почему сайт подняли на&nbsp;нем.)
+              </li>
+              <li>
+                Сайт поисковик по&nbsp;книжкам, для привлечения трафика (Nuxt3)
+              </li>
             </ul>
           </div>
         </div>
@@ -173,12 +214,12 @@
               </div>
             </div>
             <div class="job-head__line text-grey text-small">
-              <div>
+              <a href="https://letteros.com" class="link">
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
                 </svg>
                 <b>Letteros</b>
-              </div>
+              </a>
               <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#calendar" />
@@ -188,8 +229,25 @@
             </div>
           </div>
           <div class="job-description">
-            <b>Фронт</b>: На основе legacy (Jquery, без фич ES5), и иных референсов, сделал SPA конструктор-редактор писем. Написал на Vue2, Vuetify, с учетом будущей миграции на Vue3. Для приятной работы перенес часть функционала в WebWorker, сделал сохранение в IndexedDB промежуточных результатов, и навигацию по версиям документа.<br>
-            <b>Бэк</b>: На 1/3 задач пишу REST API на Yii2, на остальные 2/3 участвую больше консультациями, советами, ревью кода и идей. В целом обычный API, со локальными нюансами, но без особых заморочек.
+            <p>
+              <b>Фронт</b>: На&nbsp;основе legacy (Jquery, без фич ES5),
+              и&nbsp;иных референсов, сделал SPA
+              <nobr>конструктор-редактор</nobr> писем. Написал на&nbsp;Vue2,
+              Vuetify, с&nbsp;учетом будущей миграции на&nbsp;Vue3. Для приятной
+              работы перенес часть функционала в&nbsp;WebWorker, сделал
+              сохранение в&nbsp;IndexedDB промежуточных результатов,
+              и&nbsp;навигацию по&nbsp;версиям документа.
+            </p>
+            <p>
+              <b>Бэк</b>: На&nbsp;1/3 задач пишу <abbr title="Representational state transfer application programming interface" lang="en"
+              >REST API</abbr>
+              на&nbsp;Yii2, на&nbsp;остальные 2/3 участвую больше
+              консультациями, советами, ревью кода и&nbsp;идей. В&nbsp;целом
+              обычный
+              <abbr title="Application programming interface" lang="en"
+                >API</abbr
+              >, со&nbsp;локальными нюансами, но&nbsp;без особых заморочек.
+            </p>
           </div>
         </div>
         <hr class="hr" />
@@ -206,12 +264,12 @@
               </div>
             </div>
             <div class="job-head__line text-grey text-small">
-              <div>
+              <a href="https://2uit.ru" class="link">
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
                 </svg>
                 <b>2UIT</b>
-              </div>
+              </a>
               <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#calendar" />
@@ -221,12 +279,28 @@
             </div>
           </div>
           <div class="job-description">
-            Разработка CRM сети агентств недвижимости "Перспектива24".
-            Первый опыт с фронтом. Написал кучу страниц на Vue2. Интеграция различных сервисов (Yandex Map, и прочее)
-            Позже подключился к доработке бэка на Yii2. Доработка готовых моделей, контроллеров, вьюшек, создание новых, рефакторинг и своего и чужого кода. Сложности большей частью в огромной кодовой базе, сложной иерархией сущностей, ну и можно сказать highload. Производительность решений была очень важна
-            
-            Разработка CRM для lr-service.su. Что то вроде "UBER" для мастеров по ремонту и установке техники
-            Целиком написал фронт на Nuxt, и большую часть бэка на Yii2. Бэк в целом простой REST API, но были нетривиальные, и интересные задачи.
+            <p>
+              Разработка CRM сети агентств недвижимости
+              <a href="https://2uit.ru/realty-crm" class="link">Перспектива24</a
+              >. Первый опыт с&nbsp;фронтом. Написал кучу страниц на&nbsp;Vue2.
+              Интеграция различных сервисов (Yandex Map, и&nbsp;прочее) Позже
+              подключился к&nbsp;доработке бэка на&nbsp;Yii2. Доработка готовых
+              моделей, контроллеров, вьюшек, создание новых, рефакторинг
+              и&nbsp;своего и&nbsp;чужого кода. Сложности большей частью
+              в&nbsp;огромной кодовой базе, сложной иерархией сущностей,
+              ну&nbsp;и&nbsp;можно сказать highload.
+            </p>
+            <p>
+              Разработка CRM для
+              <a href="https://2uit.ru/lr-mobile-webservice" class="link"
+                >LR&nbsp;Service</a
+              >. Что то&nbsp;вроде &laquo;UBER&raquo; для мастеров
+              по&nbsp;ремонту и&nbsp;установке техники Целиком написал фронт
+              на&nbsp;Nuxt, и&nbsp;большую часть бэка на&nbsp;Yii2. Бэк
+              в&nbsp;целом простой <abbr title="Representational state transfer application programming interface" lang="en"
+              >REST API</abbr>, но&nbsp;были нетривиальные, и&nbsp;интересные задачи (например
+              найти ближайшего мастера).
+            </p>
           </div>
         </div>
         <hr class="hr" />
@@ -241,12 +315,12 @@
               </div>
             </div>
             <div class="job-head__line text-grey text-small">
-              <div>
+              <a href="#" class="link">
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
                 </svg>
                 <b>Freelance</b>
-              </div>
+              </a>
               <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#calendar" />
@@ -256,23 +330,27 @@
             </div>
           </div>
           <div class="job-description">
-            Сперва заказы от знакомых, потом добавилась биржа.
-            Делал простые штуки, ибо мало что умел
+            <p>
+              Сперва заказы от&nbsp;знакомых, потом добавилась биржа. Делал
+              простые<br />
+              штуки, ибо мало что умел
+            </p>
           </div>
         </div>
       </section>
       <section class="education">
         <h3>Образование</h3>
-        <div class="education-degree">
-          ФИРТ, Бизнес-информатика
+        <div class="education-degree">ФИРТ, Бизнес-информатика</div>
+        <div class="education-school">
+          Уфимский государственный авиационный технический университет, Уфа
         </div>
-        <div class="education-school">Уфимский государственный авиационный технический университет, Уфа</div>
       </section>
     </main>
     <script src="../js/main.js"></script>
     <script>
       const style = 'font-size:16px;';
-      console.log(`
+      console.log(
+        `
 %c*******************************************************
 Hi,I am Azat Kashapov. Frontend Developer.
 
@@ -283,7 +361,9 @@ Node.js (Fastify, Express)
 If you have questions, pls text me https://t.me/ufaboy
 or https://www.linkedin.com/in/azat-kashapov/
 Have a nice day!
-*******************************************************`, style)
+*******************************************************`,
+        style
+      );
     </script>
   </body>
 </html>
