fix mobile view

--- a/en/index.html
+++ b/en/index.html
@@ -145,7 +145,7 @@
                 <span class="skill">Web Extensions</span>
               </div>
             </div>
-            <div class="job-head__line text-grey text-small">
+            <div class="job-head__line inline text-grey text-small">
               <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
@@ -221,7 +221,7 @@
                 <span class="skill">PostgreSQL</span>
               </div>
             </div>
-            <div class="job-head__line text-grey text-small">
+            <div class="job-head__line inline text-grey text-small">
               <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
@@ -272,7 +272,7 @@
                 <span class="skill">MySQL</span>
               </div>
             </div>
-            <div class="job-head__line text-grey text-small">
+            <div class="job-head__line inline text-grey text-small">
               <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
@@ -329,7 +329,7 @@
                 <span class="skill">MySQL</span>
               </div>
             </div>
-            <div class="job-head__line text-grey text-small">
+            <div class="job-head__line inline text-grey text-small">
               <div>
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
