fix mobile view for ru page

--- a/ru/index.html
+++ b/ru/index.html
@@ -143,7 +143,7 @@
                 <span class="skill">Web Extensions</span>
               </div>
             </div>
-            <div class="job-head__line text-grey text-small">
+            <div class="job-head__line inline text-grey text-small">
               <a href="https://forestvpn.com" class="link">
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
@@ -213,7 +213,7 @@
                 <span class="skill">PostgreSQL</span>
               </div>
             </div>
-            <div class="job-head__line text-grey text-small">
+            <div class="job-head__line inline text-grey text-small">
               <a href="https://letteros.com" class="link">
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
@@ -263,7 +263,7 @@
                 <span class="skill">MySQL</span>
               </div>
             </div>
-            <div class="job-head__line text-grey text-small">
+            <div class="job-head__line inline text-grey text-small">
               <a href="https://2uit.ru" class="link">
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
@@ -314,7 +314,7 @@
                 <span class="skill">MySQL</span>
               </div>
             </div>
-            <div class="job-head__line text-grey text-small">
+            <div class="job-head__line inline text-grey text-small">
               <a href="#" class="link">
                 <svg class="icon" fill="none">
                   <use xlink:href="../img/iconSprite.svg#work" />
